Implement transfer command